# balance-scale

./: .gitignore  .gitmodules  BalanceScaleExample  CMakeLists.txt  LICENSE  README.md
example/: fibonacci.cpp  fibonacci_approx.cpp  fibonacci_simulator.cpp  main.cpp  multiplication.cpp
include/balance-scale/: balance-scale.hpp  complexity_functions.hpp  scale-calculator.hpp
include/balance-scale/balance-scale/: complexity_functions.hpp  complexity_functions.hpp~  measurer.hpp  measurer.hpp~  policies.hpp  scale-calculator.hpp  scale-calculator.hpp~  scale-simulator.hpp  scale_approximator.hpp  scale_simulator.hpp  utility.hpp
